<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.main.main_fragments.ExchangeFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_margin="26dp"
        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/FromTextView"
            android:text="@string/from_currency"
            android:textSize="30sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/FromImageView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/FromCurrencyTextView"
            android:layout_weight="2"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/FromImageButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:src="@drawable/baseline_create_black_24" />


    </LinearLayout>

    <EditText
        android:id="@+id/FromCurrencyEditText"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:inputType="number"
        android:hint="@string/choose_currency"
        android:textSize="20sp"
        android:gravity="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_margin="26dp"
        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/ToTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/to"
            android:textSize="30sp"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/ToImageView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/ToCurrencyTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="30sp"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/ToImageButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:src="@drawable/baseline_create_black_24" />


    </LinearLayout>

    <TextView
        android:id="@+id/ToCurrencyValueTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choose_currency"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <Button
        android:id="@+id/reverseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/invert_currencies" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/save_exchange" />

    <Button
        android:id="@+id/loadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/load_exchange" />


</LinearLayout>